Fix leaked vfunc return values

Simple fix to dec ref returned values from closures wrapping
python functions.

https://bugzilla.gnome.org/show_bug.cgi?id=686140